--- a/src/Sylius/Bundle/TaxonomyBundle/Resources/translations/validators.pt.yml
+++ b/src/Sylius/Bundle/TaxonomyBundle/Resources/translations/validators.pt.yml
@@ -10,6 +10,8 @@ sylius:
         name:
             max_length: O nome do táxon não deve ter mais que 255 caracteres.
             not_blank: Por favor, digite o nome do táxon.
+        parent:
+            is_invalid: 'Não é possível atribuir um táxon filho como táxon pai.'
     taxonomy:
         name:
             max_length: O nome da taxonomia não deve ter mais que 255 caracteres.
