--- a/src/Sylius/Bundle/TaxonomyBundle/Resources/translations/validators.ru.yml
+++ b/src/Sylius/Bundle/TaxonomyBundle/Resources/translations/validators.ru.yml
@@ -13,6 +13,8 @@ sylius:
         slug:
             not_blank: Пожалуйста, введите псевдоним для категории.
             unique: Псевдоним для категории должен быть уникальным.
+        parent:
+            is_invalid: 'Нельзя назначить дочерний таксон в качестве родительского таксона.'
     taxonomy:
         name:
             max_length: Название категории не должно быть длиннее 255 символов.
