--- a/src/Sylius/Bundle/TaxonomyBundle/Resources/translations/validators.ar.yml
+++ b/src/Sylius/Bundle/TaxonomyBundle/Resources/translations/validators.ar.yml
@@ -14,6 +14,8 @@ sylius:
         slug:
             not_blank: يرجى إدخال الاسم المختصر للتصنيف.
             unique: يجب أن يكون الاسم المختصر للتصنيف فريدًا.
+        parent:
+            is_invalid: 'لا يمكنك تعيين تصنيف فرعي كتصنيف رئيسي.'
     taxonomy:
         name:
             max_length: يجب ألا يكون اسم التصنيف أطول من 255 حرفًا.
