--- a/src/Sylius/Bundle/TaxonomyBundle/Resources/translations/validators.be.yml
+++ b/src/Sylius/Bundle/TaxonomyBundle/Resources/translations/validators.be.yml
@@ -6,6 +6,8 @@ sylius:
         name:
             max_length: Назва катэгорыі не можа быць даўжэй за 255 сімвалаў.
             not_blank: Калі ласка, увядзіце назву катэгорыі.
+    parent:
+        is_invalid: 'Немагчыма прызначыць падпарадкаваны таксон як бацькоўскі таксон.'
     taxonomy:
         name:
             max_length: Назва катэгорыі не можа быць даўжэй за 255 сімвалаў.
