--- a/src/Sylius/Bundle/TaxonomyBundle/Resources/translations/validators.bg.yml
+++ b/src/Sylius/Bundle/TaxonomyBundle/Resources/translations/validators.bg.yml
@@ -13,6 +13,8 @@ sylius:
         slug:
             not_blank: Моля, въведете слъг на категорията.
             unique: Слъг на категорията трябва да е уникален.
+        parent:
+            is_invalid: 'Не можете да зададете дъщерен таксон като родителски таксон.'
     taxonomy:
         name:
             max_length: Името на категорията не трябва да бъде по-дълго от 255 знака.
