--- a/src/Sylius/Bundle/TaxonomyBundle/Resources/translations/validators.cs.yml
+++ b/src/Sylius/Bundle/TaxonomyBundle/Resources/translations/validators.cs.yml
@@ -13,6 +13,8 @@ sylius:
         slug:
             not_blank: Prosím vložte slug taxonu.
             unique: Slug taxonu musí být unikátní.
+        parent:
+            is_invalid: 'Nelze přiřadit podřízený taxon jako nadřazený taxon.'
     taxonomy:
         name:
             max_length: Název taxonomie nesmí být delší než 255 znaků.
