--- a/src/Sylius/Bundle/TaxonomyBundle/Resources/translations/validators.da.yml
+++ b/src/Sylius/Bundle/TaxonomyBundle/Resources/translations/validators.da.yml
@@ -13,6 +13,8 @@ sylius:
         slug:
             not_blank: Angiv taksonomi slug.
             unique: Taksonomi slug skal være unik.
+        parent:
+            is_invalid: 'Du kan ikke tildele en underordnet taxon som en overordnet taxon.'
     taxonomy:
         name:
             max_length: Taksonominavn må ikke være længere end 255 tegn.
