--- a/src/Sylius/Bundle/TaxonomyBundle/Resources/translations/validators.de_CH.yml
+++ b/src/Sylius/Bundle/TaxonomyBundle/Resources/translations/validators.de_CH.yml
@@ -13,6 +13,8 @@ sylius:
         slug:
             not_blank: Bitte eine Kategorie SEO-URL angeben.
             unique: SEO-URL der Kategorie muss eindeutig sein.
+        parent:
+            is_invalid: 'Ein untergeordneter Taxon kann nicht als übergeordneter Taxon zugewiesen werden.'
     taxonomy:
         name:
             max_length: Name darf nicht länger als 255 Zeichen sein.
