--- a/src/Sylius/Bundle/TaxonomyBundle/Resources/translations/validators.el.yml
+++ b/src/Sylius/Bundle/TaxonomyBundle/Resources/translations/validators.el.yml
@@ -13,6 +13,8 @@ sylius:
         slug:
             not_blank: Παρακαλώ εισάγετε ένα μοναδικό αναγνωριστικό (slug) την ταξινομική κατηγορία.
             unique: Υπάρχει ήδη ταξινομική κατηγορία με αυτό το αναγνωριστικό (slug).
+        parent:
+            is_invalid: 'Δεν μπορείτε να ορίσετε έναν θυγατρικό ταξινομικό όρο ως γονικό ταξινομικό όρο.'
     taxonomy:
         name:
             max_length: Το όνομα ταξινομικής κατηγορίας δεν πρέπει να είναι μεγαλύτερο από 255 χαρακτήρες.
