--- a/src/Sylius/Bundle/TaxonomyBundle/Resources/translations/validators.en.yml
+++ b/src/Sylius/Bundle/TaxonomyBundle/Resources/translations/validators.en.yml
@@ -14,6 +14,8 @@ sylius:
         slug:
             not_blank: Please enter taxon slug.
             unique: Taxon slug must be unique.
+        parent:
+            is_invalid: 'You cannot assign a child taxon as a parent taxon.'
     taxonomy:
         name:
             max_length: Taxonomy name must not be longer than 255 characters.
