--- a/src/Sylius/Bundle/TaxonomyBundle/Resources/translations/validators.es.yml
+++ b/src/Sylius/Bundle/TaxonomyBundle/Resources/translations/validators.es.yml
@@ -13,6 +13,8 @@ sylius:
         slug:
             not_blank: Por favor, introduzca el slug del taxón.
             unique: El slug del taxón debe ser único.
+        parent:
+            is_invalid: 'No se puede asignar un taxón hijo como taxón padre.'
     taxonomy:
         name:
             max_length: El nombre de la taxonomía no debe ser más largo de 255 caracteres.
