--- a/src/Sylius/Bundle/TaxonomyBundle/Resources/translations/validators.fa.yml
+++ b/src/Sylius/Bundle/TaxonomyBundle/Resources/translations/validators.fa.yml
@@ -13,6 +13,8 @@ sylius:
         slug:
             not_blank: لطفا علامت دسته را وارد کنید.
             unique: علامت دسته باید یکتا باشد.
+        parent:
+            is_invalid: 'نمی‌توانید یک رده فرزند را به عنوان رده والد اختصاص دهید.'
     taxonomy:
         name:
             max_length: رده نباید بیش از 255 حرف باشد.
