--- a/src/Sylius/Bundle/TaxonomyBundle/Resources/translations/validators.fr.yml
+++ b/src/Sylius/Bundle/TaxonomyBundle/Resources/translations/validators.fr.yml
@@ -13,6 +13,8 @@ sylius:
         slug:
             not_blank: Veuillez entrer le slug du taxon.
             unique: Le slug du taxon doit être unique.
+        parent:
+            is_invalid: 'Vous ne pouvez pas attribuer un taxon enfant comme taxon parent.'
     taxonomy:
         name:
             max_length: La taxonomie ne peux dépasser les 255 caractères.
