--- a/src/Sylius/Bundle/TaxonomyBundle/Resources/translations/validators.hr.yml
+++ b/src/Sylius/Bundle/TaxonomyBundle/Resources/translations/validators.hr.yml
@@ -13,6 +13,8 @@ sylius:
         slug:
             not_blank: Molimo unesite slug kategorije.
             unique: Slug kategorije mora biti jedinstven.
+        parent:
+            is_invalid: 'Ne možete dodijeliti podređeni takson kao nadređeni takson.'
     taxonomy:
         name:
             max_length: Naziv kategorije ne smije biti duži od 255 znakova.
