--- a/src/Sylius/Bundle/TaxonomyBundle/Resources/translations/validators.hu.yml
+++ b/src/Sylius/Bundle/TaxonomyBundle/Resources/translations/validators.hu.yml
@@ -13,6 +13,8 @@ sylius:
         slug:
             not_blank: Kérem adja meg a taxon url kompatibilis megnevezését.
             unique: A taxon url kompatibilis megnevezésének egyedinek kell lennie.
+        parent:
+            is_invalid: 'Egy alárendelt taxont nem lehet szülő taxonként hozzárendelni.'
     taxonomy:
         name:
             max_length: A taxonómia neve nem lehet hosszabb 255 karakternél.
