--- a/src/Sylius/Bundle/TaxonomyBundle/Resources/translations/validators.is.yml
+++ b/src/Sylius/Bundle/TaxonomyBundle/Resources/translations/validators.is.yml
@@ -13,6 +13,8 @@ sylius:
         slug:
             not_blank: Vinsamlega sláðu inn vefslóðarheiti vöruflokks.
             unique: Vefslóðarheiti vöruflokks verður að vera einstakt.
+        parent:
+            is_invalid: 'Ekki er hægt að úthluta barnataxoni sem foreldrataxoni.'
     taxonomy:
         name:
             max_length: Nafn flokkunarkerfis má ekki vera lengra en 255 stafir.
