--- a/src/Sylius/Bundle/TaxonomyBundle/Resources/translations/validators.it.yml
+++ b/src/Sylius/Bundle/TaxonomyBundle/Resources/translations/validators.it.yml
@@ -13,6 +13,8 @@ sylius:
         slug:
             not_blank: Inserisci lo il SEO-URL della classe tassa
             unique: Il SEP-URL della classe tassa deve essere unico.
+        parent:
+            is_invalid: 'Non è possibile assegnare un taxon figlio come taxon genitore.'
     taxonomy:
         name:
             max_length: Il nome della tassonomia non deve essere più lungo di 255 caratteri.
