--- a/src/Sylius/Bundle/TaxonomyBundle/Resources/translations/validators.lt.yml
+++ b/src/Sylius/Bundle/TaxonomyBundle/Resources/translations/validators.lt.yml
@@ -9,6 +9,8 @@ sylius:
         name:
             max_length: Taksono pavadinimas neturi būti ilgesnis nei 255 simboliai.
             not_blank: Įveskite taksono pavadinimą.
+        parent:
+            is_invalid: 'Negalite priskirti vaikų taksono kaip tėvinio taksono.'
     taxonomy:
         name:
             max_length: Taksonomijos pavadinimas neturi būti ilgesnis kaip 255 simboliai.
