--- a/src/Sylius/Bundle/TaxonomyBundle/Resources/translations/validators.mn.yml
+++ b/src/Sylius/Bundle/TaxonomyBundle/Resources/translations/validators.mn.yml
@@ -13,6 +13,8 @@ sylius:
         slug:
             not_blank: Таксоны эмхэлсэн холбоосыг оруулна уу.
             unique: Таксоны эмхэлсэн холбоос давтагдашгүй байх ёстой.
+        parent:
+            is_invalid: 'Хүүхдийн таксоныг эцэг таксон болгон оноох боломжгүй.'
     taxonomy:
         name:
             max_length: Таксонимийн нэр 255 тэмдэгтээс ихгүй байх ёстой.
