--- a/src/Sylius/Bundle/TaxonomyBundle/Resources/translations/validators.nl.yml
+++ b/src/Sylius/Bundle/TaxonomyBundle/Resources/translations/validators.nl.yml
@@ -13,6 +13,8 @@ sylius:
         slug:
             not_blank: Gelieve een korte naam in te vullen.
             unique: Taxon korte naam moet uniek zijn.
+        parent:
+            is_invalid: 'U kunt geen kindtaxon toewijzen als een oudertaxis.'
     taxonomy:
         name:
             max_length: Taxonomienaam mag niet langer zijn dan 255 karakters.
