--- a/src/Sylius/Bundle/TaxonomyBundle/Resources/translations/validators.no.yml
+++ b/src/Sylius/Bundle/TaxonomyBundle/Resources/translations/validators.no.yml
@@ -10,6 +10,8 @@ sylius:
         name:
             max_length: Taksonominavn kan ikke være lengre enn 255 tegn.
             not_blank: Angi taksonominavn.
+        parent:
+            is_invalid: 'Du kan ikke tildele en barnetaxon som en foreldretaxon.'
     taxonomy:
         name:
             max_length: Taksonominavn kan ikke være lengre enn 255 tegn.
