--- a/src/Sylius/Bundle/TaxonomyBundle/Resources/translations/validators.pl.yml
+++ b/src/Sylius/Bundle/TaxonomyBundle/Resources/translations/validators.pl.yml
@@ -13,6 +13,8 @@ sylius:
         slug:
             not_blank: Wprowadź fragment URL kategorii.
             unique: Fragment URL kategorii musi być unikalny.
+        parent:
+            is_invalid: 'Nie można przypisać potomnego taksonu jako taksonu nadrzędnego.'
     taxonomy:
         name:
             max_length: Nazwa taksonomii nie może być dłuższa niż 255 znaków.
