--- a/src/Sylius/Bundle/TaxonomyBundle/Resources/translations/validators.pt_BR.yml
+++ b/src/Sylius/Bundle/TaxonomyBundle/Resources/translations/validators.pt_BR.yml
@@ -13,6 +13,8 @@ sylius:
         slug:
             not_blank: Por favor, digite o slug da Categoria.
             unique: Slug da Categoria deve ser único.
+        parent:
+            is_invalid: 'Você não pode atribuir um táxon filho como táxon pai.'
     taxonomy:
         name:
             max_length: Nome da Categoria não deve ser maior que 255 caracteres.
