--- a/src/Sylius/Bundle/TaxonomyBundle/Resources/translations/validators.ro.yml
+++ b/src/Sylius/Bundle/TaxonomyBundle/Resources/translations/validators.ro.yml
@@ -13,6 +13,8 @@ sylius:
         slug:
             not_blank: Vă rugăm să completați slugul taxonului.
             unique: Valoarea din câmpul "slug" trebuie să fie unică.
+        parent:
+            is_invalid: 'Nu puteți atribui un taxon copil ca taxon părinte.'
     taxonomy:
         name:
             max_length: Numele categorizării nu poate depăși 255 de caractere.
