--- a/src/Sylius/Bundle/TaxonomyBundle/Resources/translations/validators.sk.yml
+++ b/src/Sylius/Bundle/TaxonomyBundle/Resources/translations/validators.sk.yml
@@ -13,6 +13,8 @@ sylius:
         slug:
             not_blank: Prosím, zadajte "slug" kategórie.
             unique: '"Slug" kategórie musí byť jedinečný.'
+        parent:
+            is_invalid: 'Nie je možné priradiť podriadený taxón ako nadradený taxón.'
     taxonomy:
         name:
             max_length: Názov triedenia nesmie byť dlhší ako 255 znakov.
