--- a/src/Sylius/Bundle/TaxonomyBundle/Resources/translations/validators.sq.yml
+++ b/src/Sylius/Bundle/TaxonomyBundle/Resources/translations/validators.sq.yml
@@ -9,6 +9,8 @@ sylius:
         name:
             max_length: Emri i taksës nuk duhet të përmbajë më shumë se 255 karaktere.
             not_blank: Fut emrin e taksës.
+        parent:
+            is_invalid: 'Nuk mund të caktoni një takson fëmijë si takson prind.'
     taxonomy:
         name:
             max_length: Emri i kategorisë së taksimit nuk duhet të përmbajë më shumë se 255 karaktere.
