--- a/src/Sylius/Bundle/TaxonomyBundle/Resources/translations/validators.th.yml
+++ b/src/Sylius/Bundle/TaxonomyBundle/Resources/translations/validators.th.yml
@@ -13,6 +13,8 @@ sylius:
         slug:
             not_blank: กรุณาใส่ Slug
             unique: Slug ต้องไม่ซ้ำกัน
+        parent:
+            is_invalid: 'ไม่สามารถกำหนด taxon ลูกเป็น taxon พ่อแม่ได้'
     taxonomy:
         name:
             max_length: ชื่อหมวดหมู่ต้องมีความยาวไม่เกิน 255 ตัวอักษร
