--- a/src/Sylius/Bundle/TaxonomyBundle/Resources/translations/validators.tr.yml
+++ b/src/Sylius/Bundle/TaxonomyBundle/Resources/translations/validators.tr.yml
@@ -13,6 +13,8 @@ sylius:
         slug:
             not_blank: Lütfen kategori harf dizisi girin.
             unique: Sınıf kütle birimi benzersiz olmalıdır.
+        parent:
+            is_invalid: 'Bir alt taksonu üst takson olarak atayamazsınız.'
     taxonomy:
         name:
             max_length: Sınıflandırma adı 255 karakterden uzun olamaz.
