--- a/src/Sylius/Bundle/TaxonomyBundle/Resources/translations/validators.uk.yml
+++ b/src/Sylius/Bundle/TaxonomyBundle/Resources/translations/validators.uk.yml
@@ -13,6 +13,8 @@ sylius:
         slug:
             not_blank: Будь ласка, введіть слаґ таксону.
             unique: Слаґ таксону повинен бути унікальним.
+        parent:
+            is_invalid: 'Неможливо призначити дочірній таксон як батьківський таксон.'
     taxonomy:
         name:
             max_length: Назва таксономії не має бути довшою за 255 символів.
