--- a/src/Sylius/Bundle/TaxonomyBundle/Resources/translations/validators.zh_CN.yml
+++ b/src/Sylius/Bundle/TaxonomyBundle/Resources/translations/validators.zh_CN.yml
@@ -13,6 +13,8 @@ sylius:
         slug:
             not_blank: 请输入分类标识。
             unique: 分类标识必须是唯一的。
+        parent:
+            is_invalid: '不能将子分类指定为父分类。'
     taxonomy:
         name:
             max_length: 分类名称不能超过 255 个字符。
